[package]
name = "rust"
version = "0.1.0"
authors = ["constantin"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
actix-service = "1.0.0"
futures = "0.3.5"
bytes = "0.5.4"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.7"
log = "0.4.8"
failure = "0.1.8"
actix-http = "1.0.1"
